progresso curso react

--- a/todo-app/backend_drf/Pipfile
+++ b/todo-app/backend_drf/Pipfile
@@ -9,6 +9,8 @@ verify_ssl = true
 django-rest-framework-mongoengine = "*"
 djangorestframework = "*"
 mongoengine = "*"
+django-cors-header = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.6"
