progresso curso react

--- a/todo-app/backend_drf/Pipfile
+++ b/todo-app/backend_drf/Pipfile
@@ -10,6 +10,7 @@ django-rest-framework-mongoengine = "*"
 djangorestframework = "*"
 mongoengine = "*"
 django-cors-headers = "*"
+djongo = "*"
 
 [requires]
 python_version = "3.6"
