--- a/exercicios-redux/package.json
+++ b/exercicios-redux/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "exercicios-react",
+  "name": "exercicios-redux",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
-    "react-scripts": "3.1.1",
+    "react-scripts": "3.2.0",
     "redux": "^4.0.4"
   },
   "scripts": {
