--- a/todo-app/frontend/package.json
+++ b/todo-app/frontend/package.json
@@ -22,9 +22,9 @@
     "font-awesome": "4.7.0",
     "react": "15.4.2",
     "react-dom": "15.4.2",
-    "react-redux": "5.0.2",
+    "react-redux": "^7.1.3",
     "react-router": "3.0.2",
-    "redux": "3.6.0",
+    "redux": "^4.0.4",
     "style-loader": "0.13.1",
     "webpack": "1.14",
     "webpack-dev-server": "1.16.2"
