--- a/todo-app/frontend/package.json
+++ b/todo-app/frontend/package.json
@@ -26,6 +26,7 @@
     "react-router": "3.0.2",
     "redux": "3.6.0",
     "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0",
     "style-loader": "0.13.1",
     "webpack": "1.14",
     "webpack-dev-server": "1.16.2"
