--- a/todo-app/frontend/package.json
+++ b/todo-app/frontend/package.json
@@ -32,5 +32,8 @@
     "style-loader": "0.13.1",
     "webpack": "1.14",
     "webpack-dev-server": "1.16.2"
+  },
+  "dependencies": {
+    "http-server": "^0.11.1"
   }
 }
