--- a/todo-app/frontend/package.json
+++ b/todo-app/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server --progress --colors --inline --hot",
     "production": "webpack --progress -p",
-    "start": ""
+    "start": "foda-se"
   },
   "devDependencies": {
     "axios": "0.15.3",
